objects/Workspace_Technology__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Contract_Value__c</fullName>
        <label>Annual Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BE_Sub_BE_Product_Service__c</fullName>
        <description>Concatenation of BE, Sub-BE and Product Family. WR-1367</description>
        <formula>TEXT(Business_Entity__c) + ' &gt; '  + TEXT(Business_Sub_Entity__c) + ' &gt; ' + TEXT( Product_Family__c )</formula>
        <label>BE &gt; Sub-BE &gt; Product/Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BE_Sub_BE__c</fullName>
        <description>Concatenation of  BE and Sub BE for reporting. WR-1367</description>
        <formula>TEXT(Business_Entity__c) + ' &gt; '  + TEXT(Business_Sub_Entity__c)</formula>
        <label>BE &gt; Sub-BE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BE_Type__c</fullName>
        <description>Denotes if the line is technology/product or service</description>
        <formula>IF
( 
   (BEGINS(TEXT(Business_Entity__c), "AS-") ||  
    BEGINS(TEXT(Business_Entity__c), "TS-") ||
    BEGINS(TEXT(Business_Entity__c), "CCS-") ||
    BEGINS(TEXT(Business_Entity__c), "CSS-") ||
    BEGINS(TEXT(Business_Entity__c) , "CMS-") ||
    BEGINS(TEXT(Business_Entity__c) , "DTG: Services") ||
    CONTAINS((TEXT( Business_Sub_Entity__c )), "(Service)")
   ), 
   "Service", 
   "Product"
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BE Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Entity__c</fullName>
        <label>Business Entity (BE)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CLOUD VIRTUALIZATION</fullName>
                </value>
                <value>
                    <fullName>COLLABORATION</fullName>
                </value>
                <value>
                    <fullName>COMPUTING SYSTEMS</fullName>
                </value>
                <value>
                    <fullName>DIGITAL MEDIA</fullName>
                </value>
                <value>
                    <fullName>IoT</fullName>
                </value>
                <value>
                    <fullName>MOBILITY</fullName>
                </value>
                <value>
                    <fullName>SECURITY</fullName>
                </value>
                <value>
                    <fullName>SP VIDEO INFRA</fullName>
                </value>
                <value>
                    <fullName>SP VIDEO SW &amp; SOLUTIONS</fullName>
                </value>
                <value>
                    <fullName>SWITCHING</fullName>
                </value>
                <value>
                    <fullName>WIRELESS</fullName>
                </value>
                <value>
                    <fullName>AS-Advanced Services</fullName>
                </value>
                <value>
                    <fullName>CCS</fullName>
                </value>
                <value>
                    <fullName>CCS-Consulting Services</fullName>
                </value>
                <value>
                    <fullName>CMS-Cisco Managed Services</fullName>
                </value>
                <value>
                    <fullName>CSS-Security Services</fullName>
                </value>
                <value>
                    <fullName>ISG-Ecosystems</fullName>
                </value>
                <value>
                    <fullName>Refurbished</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>TS-Technical Services</fullName>
                </value>
                <value>
                    <fullName>DTG: Consumer-Retail</fullName>
                </value>
                <value>
                    <fullName>DTG: Consumer-Hospitality</fullName>
                </value>
                <value>
                    <fullName>DTG: Consumer-S&amp;E</fullName>
                </value>
                <value>
                    <fullName>DTG: Energy-Utilities</fullName>
                </value>
                <value>
                    <fullName>DTG: Energy-O&amp;G</fullName>
                </value>
                <value>
                    <fullName>DTG: Energy-Other</fullName>
                </value>
                <value>
                    <fullName>DTG: FSI-Retail Banking</fullName>
                </value>
                <value>
                    <fullName>DTG: FSI-Insurance</fullName>
                </value>
                <value>
                    <fullName>DTG: FSI-Wealth Mgmt</fullName>
                </value>
                <value>
                    <fullName>DTG: H/C-Life Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Sub_Entity__c</fullName>
        <label>Business Sub Entity</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Entity__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Access &amp; Aggregation</fullName>
                </value>
                <value>
                    <fullName>ACE</fullName>
                </value>
                <value>
                    <fullName>Advanced Threat Security</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>APM</fullName>
                </value>
                <value>
                    <fullName>AppDynamics ELA</fullName>
                </value>
                <value>
                    <fullName>B-Series Blade Servers</fullName>
                </value>
                <value>
                    <fullName>Bus Ops: Asset &amp; Supply Chain Mgmt</fullName>
                </value>
                <value>
                    <fullName>Bus Ops: Connected Safety &amp; Security</fullName>
                </value>
                <value>
                    <fullName>Bus Ops: Digital Operations</fullName>
                </value>
                <value>
                    <fullName>Bus Ops: Remote Worker &amp; Fleet Connect</fullName>
                </value>
                <value>
                    <fullName>C3X60 Servers</fullName>
                </value>
                <value>
                    <fullName>Cable Access &amp; Infra (CMTS, QAM, HFC)</fullName>
                </value>
                <value>
                    <fullName>CCS-Consulting Services</fullName>
                </value>
                <value>
                    <fullName>CEM-GVS</fullName>
                </value>
                <value>
                    <fullName>CII</fullName>
                </value>
                <value>
                    <fullName>Cisco Healthcare (CHC)</fullName>
                </value>
                <value>
                    <fullName>Cisco Intercloud Services-CIS</fullName>
                </value>
                <value>
                    <fullName>CiscoOne &amp; Other Software</fullName>
                </value>
                <value>
                    <fullName>CiscoONE ELA (Product)</fullName>
                </value>
                <value>
                    <fullName>CiscoONE ELA (Service)</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Cloud and Virtualization</fullName>
                </value>
                <value>
                    <fullName>Cloud Management &amp; Software</fullName>
                </value>
                <value>
                    <fullName>Cloud Networking Group(Meraki)</fullName>
                </value>
                <value>
                    <fullName>Cloud Platform and Services</fullName>
                </value>
                <value>
                    <fullName>Cloud Security</fullName>
                </value>
                <value>
                    <fullName>CLOUD VIRTUALIZATION</fullName>
                </value>
                <value>
                    <fullName>CMS-Cisco Managed Services</fullName>
                </value>
                <value>
                    <fullName>Collaboration, Video &amp; Mobility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <description>Data Source</description>
        <label>Data Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distibutor__c</fullName>
        <description>Technology Disti</description>
        <label>Distibutor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_000__c</fullName>
        <label>Amount($000)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Line_Amount__c</fullName>
        <description>Created for WR-0598 and only avaliable for Custom reports</description>
        <label>Available to Renew</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <description>Technology Partner</description>
        <label>Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family/Service Program</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Sub_Entity__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Access-Switching</fullName>
                </value>
                <value>
                    <fullName>Access-Wireless</fullName>
                </value>
                <value>
                    <fullName>ACI</fullName>
                </value>
                <value>
                    <fullName>ACS-Access Control Server</fullName>
                </value>
                <value>
                    <fullName>Active Threat Analytics</fullName>
                </value>
                <value>
                    <fullName>Advanced Phishing Protection</fullName>
                </value>
                <value>
                    <fullName>Advanced Threat</fullName>
                </value>
                <value>
                    <fullName>Advantage</fullName>
                </value>
                <value>
                    <fullName>Advisory-Incident Response</fullName>
                </value>
                <value>
                    <fullName>Advisory Optimization Services</fullName>
                </value>
                <value>
                    <fullName>Agile IT</fullName>
                </value>
                <value>
                    <fullName>AMP for CES (Cloud Email Security)</fullName>
                </value>
                <value>
                    <fullName>AMP for CWS (Cloud Web Security)</fullName>
                </value>
                <value>
                    <fullName>AMP for Endpoint</fullName>
                </value>
                <value>
                    <fullName>AMP for ESA (Email Security Appliance)</fullName>
                </value>
                <value>
                    <fullName>AMP for Network-FP and ASA Sub/Appliance</fullName>
                </value>
                <value>
                    <fullName>AMP for WSA (Web Security Appliance)</fullName>
                </value>
                <value>
                    <fullName>AMP Private Cloud</fullName>
                </value>
                <value>
                    <fullName>AnyConnect</fullName>
                </value>
                <value>
                    <fullName>AppD Volume Purchase Program</fullName>
                </value>
                <value>
                    <fullName>Application Centric Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Application Sec: App Arch Assessment</fullName>
                </value>
                <value>
                    <fullName>Application Sec: App Assessment</fullName>
                </value>
                <value>
                    <fullName>Application Sec: Cloud App Assessment</fullName>
                </value>
                <value>
                    <fullName>Application Sec: Mobile App Assessment</fullName>
                </value>
                <value>
                    <fullName>Application Sec: SDLC Services</fullName>
                </value>
                <value>
                    <fullName>Apprenda</fullName>
                </value>
                <value>
                    <fullName>ASA-CX</fullName>
                </value>
                <value>
                    <fullName>ASA High 5585</fullName>
                </value>
                <value>
                    <fullName>ASA Low 5505/5506</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Source__c</fullName>
        <label>Service Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <description>Service Type</description>
        <formula>IF( BEGINS(TEXT(Business_Entity__c), "AS-"), "AS", 
  IF(BEGINS(TEXT(Business_Entity__c), "TS-"), "TS", 
  IF(BEGINS(TEXT(Business_Entity__c), "CMS-"), "CMS", "N/A")))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_BE_Product_Family__c</fullName>
        <description>Concatenation of Sub-BE and Product Family</description>
        <formula>TEXT(Business_Sub_Entity__c) + ' &gt; ' + TEXT( Product_Family__c )</formula>
        <label>Sub-BE &gt; Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Contract_End_Date__c</fullName>
        <description>Technology Contract End Date</description>
        <label>Technology Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technology_Contract_Start_Date__c</fullName>
        <description>Technology Contract Start Date</description>
        <label>Technology Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technology_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technology Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Workspace_Technologies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workspace__c</fullName>
        <label>Opportunity Workspace</label>
        <referenceTo>AT_Workspace__c</referenceTo>
        <relationshipLabel>Workspace Technologies</relationshipLabel>
        <relationshipName>Workspace_Technologies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>technology_Specialist_Email__c</fullName>
        <description>Synced from the Service one side. This field is used to display the email of the technology specialist from the service one side</description>
        <label>Technology Specialist Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>Opportunity workspace technologies</description>
    <label>Workspace Technology</label>
    <nameField>
        <displayFormat>MT-{0}</displayFormat>
        <label>Workspace Technology Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workspace Technologies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Non_Security_Multitech_Workspace_Check</fullName>
        <active>true</active>
        <description>Non_Security_Multitech_Workspace_Check</description>
        <errorConditionFormula>NOT(
  BEGINS(UPPER( Workspace__r.Name ) , 'SECURITY') ||
  CONTAINS(UPPER(TEXT( Business_Entity__c )),  'SECURITY') ||
  BEGINS(UPPER(TEXT(Workspace__r.AT_Team__c)) , 'SEC_')  ||
  BEGINS(UPPER(TEXT(Workspace__r.AT_Team__c)) , 'DTG')  ||
  BEGINS(UPPER(TEXT(Workspace__r.AT_Team__c)) , 'DTS') ||
  BEGINS(UPPER(TEXT(Workspace__r.AT_Team__c)) , 'DTO') ||
  BEGINS(UPPER(TEXT(Workspace__r.AT_Team__c)) , 'SW SALES')  ||
  BEGINS(UPPER(TEXT(Workspace__r.AT_Team__c)) , 'AS BDM')
)</errorConditionFormula>
        <errorMessage>Only Security/DTG/DTS/DTO/Software/AS Workspaces can be created as Multi-Tech Workspaces.
Cancel this record, return to the Opportunity and click the New Opportunity Workspace button.</errorMessage>
    </validationRules>
</CustomObject>